# haskellbook

./: .gitignore  LICENSE  README.md  haskellbook.cabal
ch17-Applicative/: Applicative.hs
ch18-Monad/: BadMonad.hs  Cow.hs  EitherMonad.hs  Kleisi.hs  Monad.hs  MonadFuncs.hs  Sum.hs
ch19-ApplyingStructure/: shawty.cabal
ch19-ApplyingStructure/app/: Main.hs
ch21-Traversable/Traversable/: README.md  Traversable.cabal
ch21-Traversable/Traversable/app/: Main.hs
ch21-Traversable/Traversable/src/: Traversable.hs
ch21-Traversable/Traversable/test/: Spec.hs
ch22-Reader/: ReaderPractice.hs
ch23-State/: .gitignore  FizzBuzz.hs  Moi.hs  README.md
ch23-State/Die/: Die.cabal  README.md
ch23-State/Die/src/: Die.hs  Main.hs
ch25-ComposingTypes/: Bifunctor.hs  Compose.hs  IdentityT.hs  README.md
ch26-MonadTransformers/: Embedded.hs  Transformers.hs  r.hs
ch26-MonadTransformers/Morra/: LICENSE  Morra.cabal
ch26-MonadTransformers/Morra/src/: Main.hs
ch26-MonadTransformers/Scotty/: README.md  Scotty.cabal
ch26-MonadTransformers/Scotty/src/: Counter.hs  Main.hs
