name:                haskellbook
version:             0.1.0.0
synopsis:            My progress on haskellbook
description:         Please see README.md
homepage:            https://github.com/shuhei/haskellbook#readme
license:             BSD3
license-file:        LICENSE
author:              Shuhei Kagawa
maintainer:          shuhei.kagawa@gmail.com
copyright:           2016 Shuhei Kagawa
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      ch17-Applicative
                     , ch18-Monad
  exposed-modules:     BadMonad
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , checkers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shuhei/haskellbook
