name:                Traversable
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shuhei/Traversable#readme
license:             BSD3
license-file:        LICENSE
author:              Shuhei Kagawa
maintainer:          shuhei.kagawa@gmail.com
copyright:           2017 Shuhei Kagawa
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Traversable
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Traversable-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Traversable
  default-language:    Haskell2010

test-suite Traversable-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Traversable
                     , hspec
                     , QuickCheck
                     , checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/shuhei/Traversable
