name:                Morra
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/shuhei/Morra#readme
license:             BSD3
license-file:        LICENSE
author:              Shuhei Kagawa
maintainer:          shuhei.kagawa@gmail.com
copyright:           2017 Shuhei Kagawa
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Morra
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , transformers
                     , process
